React to replace some functionality

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Overwatch Stats</title>
-    <script src="stats.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js" crossorigin=""></script>
+    <script src="stats.js?v=444" type="text/babel"></script>
+    <link rel="stylesheet" href="style.css?v=1">
 </head>
 
 <body>
